--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             PedalPlexer Login
         </a>
         <a href="#why-becoming-a-pedalplexer" aria-label="Why becoming a PedalPlexer?">
-          <svg style="margin-top: 10px; color: #717171;" focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
+          <svg style="margin-top: 10px; color: #717171; font-weight:600" focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
             <path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path><circle cx="16" cy="23.5" r="1.5"></circle><path d="M17,8H15.5A4.49,4.49,0,0,0,11,12.5V13h2v-.5A2.5,2.5,0,0,1,15.5,10H17a2.5,2.5,0,0,1,0,5H15v4.5h2V17a4.5,4.5,0,0,0,0-9Z"></path>
-            <title>Why becoming a PedalPlexer?</title>
+            <title>Why becoming PedalPlexer?</title>
           </svg>
         </a>
         <!-- <a href="catalog" class="bx--btn bx--btn--secondary" type="button" aria-label="Browse Gears"
@@ -70,7 +70,7 @@
 
     <!-- The problem -->
 <section id="the-problem" style="margin:5rem auto; max-width:800px; text-align:center;">
-  <h2 style="font-size:2rem; color:#fff;">Ever tried to recreate a great tone and couldn’t remember why it worked?</h2>
+  <h2 style="font-size:2rem; color:#fff; font-weight:600">Ever tried to recreate a great tone and couldn’t remember why it worked?</h2>
   <p style="font-size:1.25rem; margin-top:1rem; margin-bottom:2rem; color:#717171;">
       Photos freeze the past. MIDI saves machines.<br>
       <span style="color:#9C54D5">But your decisions live somewhere else.</span>
