--- a/index.html
+++ b/index.html
@@ -323,12 +323,11 @@
             <svg class="preset-icon"
               focusable="false"
               preserveAspectRatio="xMidYMid meet"
-              fill="#3a3a3a"
               width="32"
               height="32"
               viewBox="0 0 32 32"
               xmlns="http://www.w3.org/2000/svg">
-              <path d="M19 21v-2h1v-7h-1v-2h4v2h-1v7h1v2h-4zM15.5005 21h2l-3.5005-11h-3l-3.4966 11h1.9988l.6018-2h4.7781l.6184 2zM10.7058 17l1.6284-5.4111.2559-.0024 1.6736 5.4136h-3.5579z"></path><path d="M32,32H0V0h32v32ZM2,30h28V2H2v28Z"></path>
+              <path fill="#3a3a3a" d="M19 21v-2h1v-7h-1v-2h4v2h-1v7h1v2h-4zM15.5005 21h2l-3.5005-11h-3l-3.4966 11h1.9988l.6018-2h4.7781l.6184 2zM10.7058 17l1.6284-5.4111.2559-.0024 1.6736 5.4136h-3.5579z"></path><path fill="#3a3a3a" d="M32,32H0V0h32v32ZM2,30h28V2H2v28Z"></path>
             </svg>
           </td>
           <td style="padding:12px;">
