--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <title>Why becoming PedalPlexer?</title>
           </svg>
         </a>
-        <!-- <a href="catalog" class="bx--btn bx--btn--secondary" type="button" aria-label="Browse Gears"
+        <!-- <a href="gears" class="bx--btn bx--btn--secondary" type="button" aria-label="Browse Gears"
             style="display: flex; align-items: center; gap: 0.5rem;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
                 <path d="M22 26H10a2 2 0 01-2-2V8a2 2 0 012-2H22a2 2 0 012 2V24A2 2 0 0122 26zM10 8V24H22V8zM4 24H0V22H4V10H0V8H4a2 2 0 012 2V22A2 2 0 014 24zM32 24H28a2 2 0 01-2-2V10a2 2 0 012-2h4v2H28V22h4z"/>
