--- a/plexes.html
+++ b/plexes.html
@@ -105,7 +105,7 @@
         </svg>
       </button>
 
-       <a href="pedalboard" class="showDesktop bx--btn bx--btn--primary" type="button" style="margin-left: auto!important; max-width:500px!important;">Back to Rigs
+       <a href="rigs" class="showDesktop bx--btn bx--btn--primary" type="button" style="margin-left: auto!important; max-width:500px!important;">Back to Rigs
         <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
           <path d="M14 26L15.41 24.59 7.83 17 28 17 28 15 7.83 15 15.41 7.41 14 6 4 16 14 26z"/>
         </svg>   
@@ -150,11 +150,11 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="utils.js"></script>
-  <script src="preset.js"></script>
-  <script src="local_preset.js"></script>
+  <script src="plexes.js"></script>
+  <script src="local-plexes.js"></script>
   <script src="fullscreen-menu.js"></script>
   <script src="folder.js"></script>
-  <script src="nav-preset.js"></script>
+  <script src="nav-plexes.js"></script>
   <script src="zoom.js"></script>
   
 
