--- a/rigs.html
+++ b/rigs.html
@@ -145,10 +145,10 @@
     <!-- Load scripts after content is visible -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="utils.js"></script>
-    <script src="pedalboard.js"></script>
+    <script src="rigs.js"></script>
     <script src="fullscreen-menu.js"></script>
-    <script src="nav-pedalboard.js"></script>
-    <script src="pedalboard-dnd.js"></script>
+    <script src="nav-rigs.js"></script>
+    <script src="rigs-dnd.js"></script>
   </div>
 
     <div class="zoom-controls">  
