--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         </p>
       </div>
       <div class="bx--col">
-        <h3>Learn and be inspired by AI</h3>
+        <h3>Learn & Inspire with SubPlexes</h3>
         <p>
           <span style="color:#9C54D5">Art is human, no doubts</span>. AI is here to help you learn and get inspired. Discover new tone ideas and combinations for your Plexes.
         </p>
