--- a/test.html
+++ b/test.html
@@ -33,7 +33,7 @@
 
   async function fetchPedalById(id) {
     try {
-      const res = await fetch('GET_PEDALS_BY_IDS.php', {
+      const res = await fetch('https://www.cineteatrosanluigi.it/plex/GET_PEDALS_BY_IDS.php', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ ids: [id] })
@@ -53,7 +53,7 @@
   async function fetchSubplexes(pedal) {
     if (!pedal.subplex || pedal.subplex.length === 0) return [];
     const ids = pedal.subplex.map(sp => sp.pedal_id);
-    const res = await fetch('GET_PEDALS_BY_IDS.php', {
+    const res = await fetch('https://www.cineteatrosanluigi.it/plex/GET_PEDALS_BY_IDS.php', {
       method: 'POST',
       headers: { 'Content-Type': 'application/json' },
       body: JSON.stringify({ ids })
