--- a/test.html
+++ b/test.html
@@ -5,11 +5,20 @@
 <title>Test Single Pedal</title>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<!-- Assumi che renderFullPedalboard.js sia incluso o definito prima -->
 <script src="utils.js"></script>
 <style>
   body { font-family:sans-serif; padding:20px; }
   #results { margin-top: 20px; border: 1px solid #ccc; padding: 10px; min-height: 200px; }
+  .pedal-wrapper { display:inline-block; margin:5px; }
+  .pedal-catalog { display:flex; justify-content:center; align-items:center; font-size:12px; text-align:center; }
+  .pedal-name, .head-name { font-weight:bold; }
+  .preset-container { margin-top:5px; position:relative; }
+  .preset-dropdown-wrapper { display:none; position:absolute; top:30px; left:0; background:#fff; border:1px solid #ccc; z-index:1000; width:200px; }
+  .preset-dropdown-wrapper.is-open { display:block; }
+  .preset-dropdown { list-style:none; padding:5px; margin:0; }
+  .preset-dropdown li { padding:3px 5px; cursor:pointer; }
+  .applied-preset-info { margin-top:5px; display:none; background:#f2f2f2; padding:3px 5px; border-radius:3px; font-size:0.8em; }
+  .bx--tag { margin:2px; padding:2px 5px; border-radius:3px; font-size:0.75em; display:inline-block; }
 </style>
 </head>
 <body>
@@ -21,87 +30,90 @@
 (async function() {
 
   const resultsDiv = document.getElementById('results');
-  window.resultsDiv = resultsDiv; // renderFullPedalboard si aspetta questo
+  window.resultsDiv = resultsDiv;
 
-  const pedalId = new URLSearchParams(window.location.search).get('id');
-  if (!pedalId) {
-    resultsDiv.innerHTML = 'Nessun pedale selezionato. Usa ?id=<PEDAL_ID>';
-    return;
+  // === MOCK CATALOG (esempio minimo) ===
+  if (!window.catalog) {
+    window.catalog = [
+      {
+        _id: 'pedal1',
+        name: 'Distortion X',
+        type: 'pedal',
+        width: 100,
+        height: 60,
+        color: '#ff0000',
+        "font-color": '#ffffff',
+        "inside-color": '#ff6666',
+        "inside-border": '#000000',
+        logo: '',
+        controls: [
+          { row: [{ label:'Gain', value:5, type:'knob' }] },
+          { row: [{ label:'Level', value:7, type:'knob' }] }
+        ],
+        subplex: [],
+      },
+      {
+        _id: 'pedal2',
+        name: 'Chorus Z',
+        type: 'pedal',
+        width: 90,
+        height: 50,
+        color: '#0000ff',
+        "font-color": '#ffffff',
+        "inside-color": '#6666ff',
+        "inside-border": '#000000',
+        logo: '',
+        controls: [
+          { row: [{ label:'Depth', value:3, type:'knob' }] },
+          { row: [{ label:'Rate', value:4, type:'knob' }] }
+        ],
+        subplex: [],
+      }
+    ];
   }
 
-  console.log("[TEST-HTML] Single pedal mode:", pedalId);
+  // === SINGLE PEDAL MODE ===
+  window.__SINGLE_PEDAL_MODE__ = true;
 
-  async function fetchPedalById(id) {
-    try {
-      const res = await fetch('https://www.cineteatrosanluigi.it/plex/GET_PEDALS_BY_IDS.php', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ ids: [id] })
-      });
+  // Recupera pedale da query string ?id=pedal1
+  const pedalId = new URLSearchParams(window.location.search).get('id') || 'pedal1';
 
-      if (!res.ok) throw new Error('HTTP ' + res.status);
-      const data = await res.json();
-      if (!data.docs || data.docs.length === 0) return null;
-      return data.docs[0];
-
-    } catch (err) {
-      console.error("[TEST-HTML] Errore fetching pedal:", err);
-      return null;
-    }
+  function getPedalFromCatalogById(id) {
+    return window.catalog.find(p =>
+      p._id === id || p.name === id || p._id?.normalize() === id.normalize() || p.name?.normalize() === id.normalize()
+    ) || null;
   }
 
-  async function fetchSubplexes(pedal) {
-    if (!pedal.subplex || pedal.subplex.length === 0) return [];
-    const ids = pedal.subplex.map(sp => sp.pedal_id);
-    const res = await fetch('https://www.cineteatrosanluigi.it/plex/GET_PEDALS_BY_IDS.php', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ ids })
-    });
-    if (!res.ok) return [];
-    const data = await res.json();
-    return data.docs || [];
-  }
+  const pedal = getPedalFromCatalogById(pedalId);
 
-  // Recupera pedale principale
-  const pedalDoc = await fetchPedalById(pedalId);
-  if (!pedalDoc) {
+  if (!pedal) {
     Swal.fire({ icon: 'error', title: 'Pedale non trovato', text: pedalId });
     resultsDiv.innerHTML = 'Pedale non trovato: ' + pedalId;
     return;
   }
 
-  // Recupera eventuali subplex
-  let subplexDocs = [];
-  if (pedalDoc.subplex && pedalDoc.subplex.length > 0) {
-    subplexDocs = await fetchSubplexes(pedalDoc);
-  }
+  // Inizializza catalogMap (necessario per utils.js)
+  window.catalogMap = {};
+  window.catalogMap[pedal._id] = pedal;
 
-  // Inizializza catalogMap
-  if (!window.catalogMap) window.catalogMap = {};
-  window.catalogMap[pedalId] = pedalDoc;
-  subplexDocs.forEach(sp => { window.catalogMap[sp._id] = sp; });
-
-  // Crea fake pedalboard
+  // Fake pedalboard
   const fakeBoard = {
     _id: 'fake-board',
     name: 'TEST – ' + pedalId,
     pedals: [
       {
-        pedal_id: pedalId,
+        pedal_id: pedal._id,
         row: 1,
-        rotation: 0,
-        subplex: pedalDoc.subplex || []
+        rotation: 0
       }
     ]
   };
 
-  console.log("[TEST-HTML] Rendering fake board:", fakeBoard);
-
-  // Renderizza con renderFullPedalboard
+  // Render pedalboard
   try {
     await renderFullPedalboard(fakeBoard);
-    resultsDiv.innerHTML = ''; // pulisci messaggio di caricamento
+    resultsDiv.innerHTML = ''; // pulisci messaggio caricamento
+    resultsDiv.appendChild(document.getElementById('preset')); // aggiungi il container pedalboard
   } catch (err) {
     console.error(err);
     resultsDiv.innerHTML = 'Errore nel render: ' + err.message;
@@ -109,6 +121,9 @@
 
 })();
 </script>
+
+<!-- Container necessario per renderFullPedalboard -->
+<div id="preset"></div>
 
 </body>
 </html>
