--- a/test.html
+++ b/test.html
@@ -15,6 +15,7 @@
 
 <h1>TEST PEDALBOARD SINGLE PEDAL MODE (Auth)</h1>
 <div id="results">Caricamento pedalboard...</div>
+<div id="preset" style="flex-direction: column; align-items: center;"></div>
 
 <script>
 (async function() {
