--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
       <thead style="background-color:#2e2e2e; color:#fff;">
         <tr>
           <th scope="col" style="padding:12px;">Feature</th>
-          <th scope="col" style="padding:12px;">Photo</th>
-          <th scope="col" style="padding:12px;">MIDI</th>
-          <th scope="col" style="padding:12px;">PedalPlex</th>
+          <th scope="col" style="padding:12px;">Photos</th>
+          <th scope="col" style="padding:12px;">MIDIs</th>
+          <th scope="col" style="padding:12px;">Plexex</th>
         </tr>
       </thead>
       <tbody>
@@ -351,40 +351,44 @@
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
             <!--empty--><path stroke-width="0" d="m16,2c-7.732,0-14,6.268-14,14s6.268,14,14,14,14-6.268,14-14S23.732,2,16,2Zm0,26c-6.6274,0-12-5.3726-12-12s5.3726-12,12-12,12,5.3726,12,12-5.3726,12-12,12Z"></path>
-            </svg> Local only</td>
+            </svg> 
+            <!-- Local only -->
+          </td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
             <!--full--><circle cx="16" cy="16" r="14"></circle>
-            </svg> Complete sync (Mobile, Tablet, Desktop)</td>
+            </svg> 
+            <!-- Complete sync (Mobile, Tablet, Desktop) -->
+          </td>
         </tr>
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">Plexes</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
             <!--empty--><path stroke-width="0" d="m16,2c-7.732,0-14,6.268-14,14s6.268,14,14,14,14-6.268,14-14S23.732,2,16,2Zm0,26c-6.6274,0-12-5.3726-12-12s5.3726-12,12-12,12,5.3726,12,12-5.3726,12-12,12Z"></path>
-            </svg> 1 (View only)</td>
+            </svg> 1 
+            <!-- (View only) -->
+          </td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
             <!--full--><circle cx="16" cy="16" r="14"></circle>
-            </svg> Unlimited</td>
+            </svg> 
+            Unlimited
+          </td>
         </tr>
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">
             Plexes catalog 
-            <svg style="vertical-align:middle" class="preset-icon"
-              focusable="false"
-              preserveAspectRatio="xMidYMid meet"
-              width="32"
-              height="32"
-              viewBox="0 0 32 32"
-              xmlns="http://www.w3.org/2000/svg">
+            <svg style="vertical-align:middle" class="preset-icon" focusable="false" preserveAspectRatio="xMidYMid meet" width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
               <path fill="#3a3a3a" d="M19 21v-2h1v-7h-1v-2h4v2h-1v7h1v2h-4zM15.5005 21h2l-3.5005-11h-3l-3.4966 11h1.9988l.6018-2h4.7781l.6184 2zM10.7058 17l1.6284-5.4111.2559-.0024 1.6736 5.4136h-3.5579z"></path><path fill="#3a3a3a" d="M32,32H0V0h32v32ZM2,30h28V2H2v28Z"></path>
             </svg>
           </td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
             <!--empty--><path stroke-width="0" d="m16,2c-7.732,0-14,6.268-14,14s6.268,14,14,14,14-6.268,14-14S23.732,2,16,2Zm0,26c-6.6274,0-12-5.3726-12-12s5.3726-12,12-12,12,5.3726,12,12-5.3726,12-12,12Z"></path>
-            </svg> N/A</td>
+            </svg> 
+            <!-- N/A -->
+          </td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
             <!--full--><circle cx="16" cy="16" r="14"></circle>
@@ -395,7 +399,9 @@
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
             <!--half--><path d="M29.37,11.84a13.6,13.6,0,0,0-1.06-2.51A14.17,14.17,0,0,0,25.9,6.1a14,14,0,1,0,0,19.8,14.17,14.17,0,0,0,2.41-3.23,13.6,13.6,0,0,0,1.06-2.51,14,14,0,0,0,0-8.32ZM4,16A12,12,0,0,1,16,4V28A12,12,0,0,1,4,16Z"></path>
-            </svg> 1 (Local)</td>
+            </svg> 1 
+            <!-- (Local) -->
+          </td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
             <!--full--><circle cx="16" cy="16" r="14"></circle>
@@ -406,22 +412,32 @@
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
             <!--half--><path d="M29.37,11.84a13.6,13.6,0,0,0-1.06-2.51A14.17,14.17,0,0,0,25.9,6.1a14,14,0,1,0,0,19.8,14.17,14.17,0,0,0,2.41-3.23,13.6,13.6,0,0,0,1.06-2.51,14,14,0,0,0,0-8.32ZM4,16A12,12,0,0,1,16,4V28A12,12,0,0,1,4,16Z"></path>
-            </svg> Limited (Public only)</td>
+            </svg> 
+            Public only
+            <!-- Limited (Public only) -->
+          </td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
             <!--full--><circle cx="16" cy="16" r="14"></circle>
-            </svg> Complete (Public, Private, Custom)</td>
+            </svg> 
+            Complete 
+            <!-- (Public, Private, Custom) -->
+          </td>
         </tr>     
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">Future features</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
             <!--half--><path d="M29.37,11.84a13.6,13.6,0,0,0-1.06-2.51A14.17,14.17,0,0,0,25.9,6.1a14,14,0,1,0,0,19.8,14.17,14.17,0,0,0,2.41-3.23,13.6,13.6,0,0,0,1.06-2.51,14,14,0,0,0,0-8.32ZM4,16A12,12,0,0,1,16,4V28A12,12,0,0,1,4,16Z"></path>
-            </svg> Limited</td>
+            </svg> 
+            <!-- Limited -->
+          </td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
             <!--full--><circle cx="16" cy="16" r="14"></circle>
-            </svg> All upcoming features</td>
+            </svg> 
+            <!-- All upcoming features -->
+          </td>
         </tr>      
       </tbody>
     </table>
