--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
 
 
 <section id="what-is-pedalplex" style="max-width:800px; margin:5rem auto;text-align:center;">
-  <h2>What is PedalPlex?</h2>
-  <p>
+  <h2 style="font-size:2rem; color:#fff; font-weight:600">What is PedalPlex?</h2>
+  <p style="font-size:1.25rem; margin-top:1rem; margin-bottom:2rem; color:#717171;">
     PedalPlex is a web-based pedalboard and guitar rig management tool designed for guitarists and bassists.
     It allows users to visually recreate their real pedalboards and amplifiers, save exact knob and switch
     positions as tone presets, and organize sounds for songs, sessions, and live performances.
   </p>
-  <p>
-    Unlike photos or MIDI dumps, PedalPlex focuses on <strong>decision memory</strong>: why a tone works,
+  <p style="font-size:1.25rem; margin-top:1rem; margin-bottom:2rem; color:#717171;">
+    Unlike photos or MIDI dumps, PedalPlex focuses on <span style="color:#9C54D5">decision memory</span>: why a tone works,
     how it evolved, and how to rebuild it months later without relying on specific hardware.
   </p>
 </section>
